<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/backgorund_2"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="32dp">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/logo_alerta"
                android:contentDescription="@string/content_desc_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textSize="20sp"
                android:textColor="@color/text_primary"
                android:textStyle="bold"
                android:fontFamily="@font/inter"
                android:layout_marginTop="24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_subtitle"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="#212121"
                android:textAlignment="center"
                android:fontFamily="@font/inter" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AlertaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/hint_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/AlertaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/ic_password_lock"
                app:startIconTint="@color/hint_grey"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/hint_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AlertaTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/ic_password_lock"
                app:startIconTint="@color/hint_grey"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/hint_grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_confirm_password"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    android:fontFamily="@font/inter" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/register_button_text"
                android:textAllCaps="false"
                android:backgroundTint="@color/alerta_primary"
                android:textColor="@color/white"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:elevation="1dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
